# Wasmnizer-ts

./: .c8rc.json  .eslintignore  .gitignore  .prettierignore  ATTRIBUTIONS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.release.json
.devcontainer/: Dockerfile
.github/workflows/: benchmark.yml  build_llvm_libraries.yml  build_wamrc.yml  libdyntype_ci.yaml  ts2wasm_aot.yml  ts2wasm_ci.yaml  ts2wasm_macos.yaml  ts2wasm_macos.yml  ts2wasm_windows.yml
cli/: options.json  ts2wasm.ts
config/: config_mgr.ts  log4js.ts
doc/: additonal_sematic_check.md  architecture.md  faq.md  getting_started.md  libdyntype_api_spec.md  libstruct_indirect_api_spec.md  validation_strategy.md
doc/developer-guide/: any_object.md  basic_concepts.md  class.md  expose_host_API.md  fallback.md  feature_list.md  function.md  generic.md  import_export.md  index.md  interface.md  wasmType_usage.md
doc/standard-library/: array.md  console.md  index.md  math.md  string.md
example/: CMakeLists.txt  build.sh  wamr_config_wasmnizer_ts.cmake
example/app-framework/: CMakeLists.txt  attr_container.ts  build.sh  connection.ts  request.ts  timer.ts  utils.ts  wamr_config_wasmnizer_ts.cmake
example/app-framework/app/: connection.ts  request_handler.ts  request_sender.ts  timer.ts
example/app-framework/lib/: attr_container.ts  connection.ts  request.ts  timer.ts  utils.ts
example/app-framework/profiles/host-aot/: wamr_config_wasmnizer_ts.cmake
example/app-framework/profiles/host-interp/: wamr_config_wasmnizer_ts.cmake
example/app-framework/src/: iwasm_main.c  main.c
example/samples/: connection.ts  request_handler.ts  request_sender.ts  timer.ts
example/src/: iwasm_main.c
lib/builtin/: builtin_name.ts  lib.type.d.ts  lib_builtin.ts  wasm_lib_type_comment.ts
runtime-library/: CMakeLists.txt  README.md  build.sh  main.c  wamr_config.cmake
runtime-library/libdyntype/: CMakeLists.txt  README.md  lib_dyntype_wrapper.c  libdyntype.c  libdyntype.cmake  libdyntype.h  libdyntype_export.h
runtime-library/libdyntype/dynamic/: fallback.c  object.c  pure_dynamic.h  type.h
runtime-library/libdyntype/dynamic-qjs/: context.c  pure_dynamic.h
runtime-library/libdyntype/dynamic-simple/: README.md  context.c  dyn_value.c  dyn_value.h  fallback.c  object.c  pure_dynamic.h
runtime-library/libdyntype/dynamic-simple/dyn-value/: README.md  dyn_value.c  dyn_value.h
runtime-library/libdyntype/dynamic-simple/dyn-value/class/: date.c  dyn_class.c  dyn_class.h  object.c  string.c
runtime-library/libdyntype/extref/: extref.c  extref.h
runtime-library/libdyntype/test/: CMakeLists.txt  dump.cc  object_property_test.cc  operator_test.cc  prototype_test.cc  test_app.h  types_test.cc
runtime-library/stdlib/: lib_array.c  lib_console.c  lib_timer.c
runtime-library/stringref/: README.md  stringref_normal.c  stringref_qjs.c  stringref_simple.c
runtime-library/struct-indirect/: lib_struct_indirect.c  lib_struct_indirect.h
runtime-library/utils/: object_utils.c  object_utils.h  type_utils.c  type_utils.h  wamr_utils.c  wamr_utils.h
scripts/: copy_lib_files.js  link_hooks.js
scripts/gdb/: constants.py  utils.py  wamr_dbg.py  wamr_exec_env.py  wamr_objects.py  wamr_types.py
src/: dump_ast.ts  error.ts  expression.ts  frontend.ts  import_resolve.ts  log.ts  scope.ts  semantic_check.ts  statement.ts  type.ts  utils.ts  variable.ts
src/backend/: index.ts
src/backend/binaryen/: index.ts  memory.ts  utils.ts  wasm_expr_gen.ts  wasm_stmt_gen.ts  wasm_type_gen.ts
src/semantics/: builder_context.ts  builtin.ts  dump.ts  expression_builder.ts  flatten.ts  index.ts  internal.ts  predefined_types.ts  runtime.ts  semantics_nodes.ts  statement_builder.ts  type_creator.ts  value.ts  value_types.ts
src/semantics/ir/: data_pool.ts  function.ts  ir_context.ts  ircode.ts  irmodule.ts
tests/benchmark/: README.md  any_basic_type_access.js  any_basic_type_access.ts  any_complex_type_access.js  any_complex_type_access.ts  array_access.js  array_access.ts  array_access_i32.js  array_access_i32.ts  binarytrees_class.js  binarytrees_class.ts  binarytrees_interface.js  binarytrees_interface.ts  class_access.js  class_access.ts  class_allocation.js  class_allocation.ts  compile_benchmark.js  fibonacci.js  fibonacci.ts  interface_access_field_fastpath.js  interface_access_field_fastpath.ts  interface_access_field_slowpath.js  interface_access_field_slowpath.ts  interface_access_method_fastpath.js  interface_access_method_fastpath.ts  interface_access_method_slowpath.js  interface_access_method_slowpath.ts  mandelbrot.js  mandelbrot.ts  mandelbrot_i32.js  mandelbrot_i32.ts  merkletrees.js  merkletrees.ts  nbody.js  nbody.ts  nbody_class.js  nbody_class.ts  nbody_interface.js  nbody_interface.ts  (+12 more)
tests/samples/: add_shorthand_prop.ts  any_as_string.ts  any_binary_operation.ts  any_box_any.ts  any_box_array.ts  any_box_boolean.ts  any_box_number.ts  any_box_obj.ts  any_box_obj_as_return_value.ts  any_box_string.ts  any_cast_class.ts  any_func_call.ts  any_nested_literal_value.ts  any_obj_prop_get.ts  any_obj_prop_get_as_string.ts  any_obj_prop_set.ts  array_concat.ts  array_copyWithin.ts  array_every.ts  array_fill.ts  array_filter.ts  array_find.ts  array_findIndex.ts  array_foreach.ts  array_includes.ts  array_indexOf.ts  array_join.ts  array_lastIndexOf.ts  array_map.ts  array_nested_array.ts  array_new_array.ts  array_new_literal_any.ts  array_pop.ts  array_push.ts  array_reduce.ts  array_reduceRight.ts  array_reverse.ts  array_shift.ts  array_slice.ts  array_some.ts  (+144 more)
tests/samples/export_from/: classB.ts
tests/unit/: comment.test.ts  expression.test.ts  statement.test.ts  type.test.ts
tests/utils/: test_helper.ts
tools/validate/module-run/: runWasm.js
tools/validate/run_module/: import_object.cjs  import_object.js  readme.md  run_module_on_chrome.html  run_module_on_chrome.js  run_module_on_node.cjs  run_module_on_node.js
tools/validate/run_module_on_node/: import_object.js  run_module_on_node.md
tools/validate/run_module_on_v8/: run_module_on_v8.md
(+14 files in other folders)
